fixed too-wide header on mobile

--- a/src/components/LeftNav.module.css
+++ b/src/components/LeftNav.module.css
@@ -36,7 +36,7 @@
   .current {
     text-decoration: underline white;
     color: rgb(186, 196, 221);
-    font-size: 20px;
+    font-size: 14px;
     font-family: "Roboto", sans-serif;
     font-weight: lighter;
     font-style: italic;
@@ -47,7 +47,7 @@
     color: rgb(186, 196, 221);
     margin: 0px 20px 20px 0px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 14px;
     /* font-style: italic; */
     font-family: "Roboto", sans-serif;
     font-weight: lighter;
